# KekeBot

./: .env.dev  .gitignore  README.md  bot.py  plugin_config.json  pyproject.toml  requirements.txt
data/manager/: plugin_list.yml
keke_bot/plugins/asoul/: __init__.py
keke_bot/plugins/nonebot_plugin_fortune/: __init__.py  config.py  utils.py
keke_bot/plugins/random_cat_gif/: __init__.py  data_source.py
keke_bot/plugins/svcalculate/: __init__.py  data_source.py
resources/fortune/: fortune_config.json  fortune_data.json  fortune_setting.json
resources/fortune/img/univirtual/: univirtual.psd
