[tool.poetry]
name = "keke-bot"
version = "0.1.0"
description = "keke-bot"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.7"
nonebot2 = "^2.0.0-beta.1"
nonebot-adapter-onebot = "^2.0.0-beta.1"
nonebot-plugin-manager = "^0.5.9"
nonebot-plugin-heisi = "^0.3.0"
nonebot-plugin-withdraw = "^0.2.0"
nonebot-plugin-status = "^0.3.0"
nonebot-plugin-crazy-thursday = "^0.2.1"
nonebot-plugin-alias = "^0.3.0"
nonebot-plugin-htmlrender = "^0.0.4"
nonebot-plugin-apscheduler = "^0.1.2"
nonebot-plugin-petpet = "^0.2.11"
httpx-socks = "^0.7.3"
httpx = ">=0.19.0"
Jinja2 = "^3.0.0"


[tool.poetry.dev-dependencies]
nb-cli = "^0.6.0"

[tool.nonebot]
plugins = []
plugin_dirs = []


[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


