[tool.poetry]
name = "keke-bot"
version = "0.1.0"
description = "keke-bot"
authors = ['inscripoem']
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.7"
nonebot2 = "^2.0.0-beta.1"
nonebot-adapter-onebot = "^2.0.0-beta.1"
nonebot-plugin-manager = "^0.5.9"
nonebot-plugin-heisi = "^0.3.0"
nonebot-plugin-withdraw = "^0.2.0"
nonebot-plugin-status = "^0.3.0"
nonebot-plugin-crazy-thursday = "^0.2.1"
nonebot-plugin-alias = "^0.3.0"
nonebot-plugin-htmlrender = "^0.0.4"
nonebot-plugin-apscheduler = "^0.1.2"
nonebot-plugin-petpet = "^0.2.11"
baike = "^1.5.0"
cachetools = "^5.0.0"
cos-python-sdk-v5 = "^1.9.0"
feedparser = "^6.0.0"
httpx = ">=0.19.0"
imageio = "^2.13.0"
Jinja2 = "^3.0.0"
langid = "^1.1.0"
lxml = "^4.7.0"
mcstatus = "^6.5.0"
numpy = "^1.21.0"
Pillow = ">=8.4.0"
PixivPy-Async = "^1.2.0"
playwright = "^1.17.0"
pydub = "^0.25.0"
python-Levenshtein-wheels = "^0.13.0"
tencentcloud-sdk-python = "^3.0.0"
thefuzz = "^0.19.0"
wolframalpha = "^5.0.0"


[tool.poetry.dev-dependencies]
nb-cli = "^0.6.0"

[tool.nonebot]
plugins = ["nonebot_plugin_ddcheck", "nonebot_plugin_asoulcnki"]
plugin_dirs = []


[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


